src/objects/Portal_Service_User_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category of the preference</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Service_Access__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Portal Service Access to which this User preference refers</description>
        <label>Portal Service Access</label>
        <referenceTo>Portal_Application_Right__c</referenceTo>
        <relationshipLabel>Portal Service User Preferences</relationshipLabel>
        <relationshipName>Portal_Service_User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Portal User subscribed to the preference</description>
        <label>Subscribed</label>
        <type>Checkbox</type>
    </fields>
    <label>Portal Service User Preference</label>
    <listViews>
        <fullName>All_w_details</fullName>
        <columns>NAME</columns>
        <columns>Portal_Service_Access__c</columns>
        <columns>Category__c</columns>
        <columns>Subscribed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All w details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Category Instance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Service User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>